[tool.poetry]
name = "pyfixtures"
version = "1.0.0"
description = "Pytest style fixtures outside of Pytest."
authors = ["Ian Boyes", "Blake Smith"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/virtool/fixtures"
classifiers = [
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.8"
]
packages = [
    { include = "pyfixtures" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-asyncio = "^0.17.0"
pytest-xdist = "^2.2.0"
pytest-cov = "^2.11.1"
pytest-aiohttp = "0.3.0"
pytest-regressions = "^2.2.0"
pytest-instafail = "^0.4.2"
pytest-sugar = "^0.9.4"
pytest-picked = "^0.4.6"
sphinx = "^4.0.2"
coloredlogs = "^15.0"
motor = "^2.5.1"
pytest-docker-compose = "^3.2.1"
black = "22.3.0"
pre-commit = "^2.18.1"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
